# occ-2024-2

./: .gitignore  README.md  aboutme.md  index.htm  mk_structure.sh  recomendacoes.md
Projeto_MercadoLivre/: CMakeLists.txt  README.md  compila.sh  main.md  test.sh
Projeto_MercadoLivre/config/: formato_entrada.txt  formato_saida.txt  funcao_objetivo.txt  restricoes.txt
Projeto_MercadoLivre/data/input/: instance_0007.txt
Projeto_MercadoLivre/data/output/: instance_0008.txt_solution.txt  instance_0016.txt_solution.txt
Projeto_MercadoLivre/include/algorithm/: greedy_algorithm.h
Projeto_MercadoLivre/include/app/: app_controller.h
Projeto_MercadoLivre/include/core/: solution.h  warehouse.h
Projeto_MercadoLivre/include/docs/: InputParser.md
Projeto_MercadoLivre/include/input/: input_parser.h
Projeto_MercadoLivre/include/modules/: cria_auxiliares.h  postprocess.h  preprocess.h  process.h  refinamento_local.h
Projeto_MercadoLivre/include/modules/docs/: cria_auxiliares.md  estatisticas.md
Projeto_MercadoLivre/include/report/: report_generator.h
Projeto_MercadoLivre/reports/: report_20250425_194519.html
Projeto_MercadoLivre/src/: main.cpp
Projeto_MercadoLivre/src/algorithm/: dinkelbach_algorithm.cpp
Projeto_MercadoLivre/src/app/: app_controller.cpp
Projeto_MercadoLivre/src/core/: solution.cpp
Projeto_MercadoLivre/src/input/: input_parser.cpp
Projeto_MercadoLivre/src/modules/: process.cpp  selecao_otimizada.cpp  solucao_inicial.cpp
Projeto_MercadoLivre/src/report/: report_generator.cpp
Projeto_MercadoLivre/src/utils/: solution_formatter.cpp
Projeto_MercadoLivre/test/input/: input_file_validator_test.cpp  input_parser_test.cpp
Projeto_MercadoLivre/val/: valida.sh  validador_completo.cpp
Projeto_MercadoLivre_v1/: commits.md  compila.sh  compila_direto.sh  erros  erros_compilacao  main.md  plano
Projeto_MercadoLivre_v1/config/: dados
Projeto_MercadoLivre_v1/docs/: roteiro.md
Projeto_MercadoLivre_v1/include/app/: app_controller.h
Projeto_MercadoLivre_v1/old/: resultado_implementacao  resultado_validacao
Projeto_MercadoLivre_v1/src/: main.cpp
Projeto_MercadoLivre_v2/: CMakeLists.txt  README.md  artigo.md  compara.md  compila  compila.sh  desafio_info.txt  erros_compilacao  otimizacao.md  plot_bov_evolution.py  prompt  roteiro.md  setup_ortools.sh  vcpkg.json
Projeto_MercadoLivre_v2/data/output/: instance_0001.sol  instance_0002.sol  instance_0003.sol  instance_0004.sol  instance_0005.sol  instance_0006.sol  instance_0007.sol  instance_0008.sol  instance_0009.sol  instance_0010.sol  instance_0011.sol  instance_0012.sol  instance_0013.sol  instance_0014.sol  instance_0015.sol  instance_0016.sol  instance_0017.sol  instance_0018.sol  instance_0019.sol  instance_0020.sol
Projeto_MercadoLivre_v2/include/: analisador_relevancia.h  armazem.h  benchmark_manager.h  branch_and_bound_solver.h  busca_local_avancada.h  decomposicao_benders.h  decomposicao_dantzig_wolfe.h  desafio_info.h  formatacao_terminal.h  gestor_waves.h  localizador_itens.h  menu.h  ml_selector.h  otimizador_dinkelbach.h  otimizador_distribuido.h  otimizador_multiobjetivo.h  otimizador_paralelo.h  otimizador_pli.h  otimizador_pli_alm.h  otimizador_wave.h  parser.h  pli_solver.h  pli_solver_custom.h  repositorio_armazem.h  seletor_waves.h  solucionar_desafio.h  validar_resultados.h  verificador_disponibilidade.h  verificar_estruturas_auxiliares.h  verificar_instancias.h  visualizador_resultados.h
Projeto_MercadoLivre_v2/python/: .dockerignore  Dockerfile  README.md  WaveOrderPicking  WaveOrderPicking.prm  compara.py  config.ini  explain.md  main.py  menu_options.txt  pycache_clean.sh  requirements.txt  run_docker.sh  start.sh
Projeto_MercadoLivre_v2/python/results/: results
Projeto_MercadoLivre_v2/python/results/a/: instance_0001_result.txt  instance_0005_result.txt  instance_0006_result.txt  instance_0007_result.txt  instance_0008_result.txt  instance_0009_result.txt  instance_0010_result.txt  instance_0011_result.txt  instance_0013_result.txt  instance_0014_result.txt  instance_0015_result.txt  instance_0016_result.txt  instance_0018_result.txt  instance_0019_result.txt
Projeto_MercadoLivre_v2/python/results/backup/: instance_0005_result_1.txt  instance_0005_result_170.txt  instance_0005_result_2.txt  instance_0005_result_3.txt  instance_0005_result_4.txt  instance_0005_result_5.txt  instance_0005_result_6.txt
Projeto_MercadoLivre_v2/python/results/logs/: validation_log_100525-1112.txt  validation_log_100525-2358.txt  validation_log_110525-0012.txt  validation_log_110525-0032.txt  validation_log_110525-0050.txt  validation_log_110525-1639.txt  validation_log_110525-2008.txt  validation_log_110525-2051.txt  validation_log_110525-2149.txt
Projeto_MercadoLivre_v2/python/src/: config_manager.py
Projeto_MercadoLivre_v2/python/src/factories/: solver_factory.py
Projeto_MercadoLivre_v2/python/src/solvers/: base_solver.py
Projeto_MercadoLivre_v2/python/src/solvers/heuristic/: greedy_solver.py  ils_solver.py  local_search.py  vnd.py
Projeto_MercadoLivre_v2/python/src/solvers/pli/: pli_solver.py
Projeto_MercadoLivre_v2/python/src/solvers/pli/linearizers/: fraction_linearizer.py
Projeto_MercadoLivre_v2/src/: analisador_relevancia.cpp  benchmark_manager.cpp  branch_and_bound_solver.cpp  busca_local_avancada.cpp  decomposicao_benders.cpp  decomposicao_dantzig_wolfe.cpp  desafio_info.cpp  gestor_waves.cpp  localizador_itens.cpp  main.cpp  menu.cpp  ml_selector.cpp  otimizador_dinkelbach.cpp  otimizador_distribuido.cpp  otimizador_multiobjetivo.cpp  otimizador_paralelo.cpp  otimizador_pli.cpp  otimizador_pli_alm.cpp  parser.cpp  pli_solver_custom.cpp  repositorio_armazem.cpp  seletor_waves.cpp  solucionar_desafio  solucionar_desafio.cpp  validar_resultados.cpp  validar_resultados_aux.cpp  verificador_disponibilidade.cpp  verificar_estruturas_aux.cpp  verificar_estruturas_auxiliares.cpp  verificar_instancias.cpp  visualizador_resultados.cpp
b1/: README.md  requirements.txt
b1/app/: __init__.py  bin_packing copy.py  bin_packing.py  ilp.py  main.py
(+201 files in other folders)
